( fix ) Last minute fixes on Comma error on the template and some spacing on the styles

--- a/views/resources/scss/edit-form.scss
+++ b/views/resources/scss/edit-form.scss
@@ -15,11 +15,9 @@ edit-activity {
   left: 10%;
   top: 5vh;
   
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: flex-start;
-  
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr 90%;  
   padding: 0.8rem;
   z-index: 1;
 
@@ -42,16 +40,15 @@ edit-activity {
   }
 
   .main {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-    
+    display: grid;
+    grid-template-columns: 1fr 90%;
+    grid-template-rows: 1fr;
+    grid-column-gap: 1rem;
     width: 100%;
     height: 100%;
     .activities {
-      width: 88%;
-      height: 80vh;
-      max-height: 90%;
+      width: 100%;
+      height: 100%;
       background: rgba($color: $main-color, $alpha: 0.7);
       border-radius: .3rem;
       padding: .625rem;
@@ -117,7 +114,8 @@ edit-activity {
 
     }
     .week-days {
-      width: 10%;
+      width: 100%;
+      height: 100%;
       overflow: auto;
       
       display: flex;
